--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <script>
 
-        var targetUrl = "https://www.youtube.com/channel/UCa_UMppcMsHIzb5LDx1u9zQ"; 
+        var targetUrl = "https://beacons.ai/wwclub"; 
    
 
 
