--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Connecting...</title>
     <style>
         body {
-            background-color: #0b1e3b; /* Твой фирменный темно-синий */
+            background-color: #0b1e3b; 
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -19,12 +19,12 @@
             color: white;
         }
 
-        /* Анимация загрузки */
+     
         .spinner {
             width: 50px;
             height: 50px;
             border: 5px solid rgba(255, 255, 255, 0.2);
-            border-top: 5px solid #FFD700; /* Золотой цвет */
+            border-top: 5px solid #FFD700; 
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin-bottom: 20px;
